# lowfoundAI

./: .env-template  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
Docker/django/: Dockerfile  docker-entrypoint.sh
Docker/nginx/: Dockerfile  nginx.conf
Docker/postgres/: env
Docker/www/: Dockerfile
lowfoundAI/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
lowfoundAI/chat/: apps.py  models.py  remote_api.py  schema.py
lowfoundAI/chat/migrations/: 0001_initial.py  0002_rename_text_message_response.py
lowfoundAI/user/: apps.py
lowfoundAI/user/migrations/: 0001_initial.py
static/js/: chat.js
templates/: base.html  nav.html
templates/chat/: chat.html  input.html
templates/login/: login.html  login_form.html  register_form.html
