[tool.poetry]
name = "lowfoundAI"
version = "0.1.0"
description = "webapp to work with ChatGPT via api"
authors = ["yuriy.kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
python-dotenv = "^0.21.0"
dj-database-url = "^1.2.0"
django-bootstrap4 = "^22.3"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
graphene-django = "^3.1.2"
graphene = "^3.2.2"
httpx = "^0.24.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
django-extensions = "^3.2.3"
coverage = "^7.2.1"
django-debug-toolbar = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
